--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ bevy_text = ["bevy/bevy_text"]
 bevy_ui = ["bevy/bevy_ui"]
 
 [dependencies]
-bevy = { version = "0.7", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }
+bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }
 bevy_egui = { version = "0.14", default-features = false, features = ["open_url"] }
 pretty-type-name = "1.0"
 image = { version = "0.23", default-features = false }
