--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ nalgebra031 = { package = "nalgebra", version = "0.31", optional = true }
 bevy-inspector-egui-derive = { version = "0.11.0", path = "bevy-inspector-egui-derive" }
 
 [dev-dependencies]
-bevy = { version = "0.7", default-features = false, features = ["x11", "bevy_winit"] }
+bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["x11", "bevy_winit"] }
 # bevy_mod_picking = { version = "0.4" }
 noise = "0.7"
 once_cell = "1.0"
